--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <html>
     <head>
+        <title>Simply Calculate Your Interest</title> 
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+            Amount :<input type="number"  id="principal">  <br>
+             Rate :<input type="range" onchange="updateRate()" id="rate" min=1 max=20 value=10.25 step=0.25>
+            <span id="rate_value">
+            10.25
+             </span> <br>
+            No. of Years :<select id="years">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">5</option>
+                    <option value="7">5</option>
+                    <option value="8">5</option>
+                    <option value="9">5</option>
+            </select> <br>
+            
+            <button onmousemove="compute()">Compute</button>
+            <br>
+            Interest : <span id="result"></span><br>
+        </div>
+        <footer>
+        &#169; This Calculator belongs to Mayank Vishwakarma.
+        </footer>
     </body>
 </html>
