--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <h1>Simple Interest Calculator</h1>
 
             Amount :<input type="number"  id="principal">  <br>
-             Rate :<input type="range" onchange="updateRate()" id="rate" min=1 max=20 value=10.25 step=0.25>
+             Rate :<input type="range" onmousemove="updateRate()" id="rate" min=1 max=20 value=10.25 step=0.25>
             <span id="rate_value">
             10.25
              </span> <br>
@@ -26,7 +26,7 @@
                     <option value="10">10</option>
             </select> <br>
             
-            <button onmousemove="compute()">Compute</button>
+            <button onclick="compute()">Compute</button>
             <br>
             Interest : <span id="result"></span><br>
         </div>
